// After you change your Prisma schema, do not forget:
// Run `npx prisma migrate dev --name <description>` to update DB - like a git.
// Run `npx prisma generate` to regenerate Prisma for TypeScript
// Run `npx prisma studio` to open Prisma Studio
// Run `npx prisma db push` to push schema changes to the database without creating a migration -> Do not recommend...

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Sync {
  id          String    @id @default(uuid())
  title       String
  description String?
  timeZone    String    @default("UTC")
  expiresAt   DateTime?
  hashedPasscode String
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  timeOptions  TimeOption[]
  participants Participant[]

  @@index([expiresAt])
}

model TimeOption {
  id                     String   @id @default(uuid())
  syncId                 String
  date                   DateTime
  startTime              DateTime
  endTime                DateTime
  createdByParticipantId String?
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt

  sync      Sync         @relation(fields: [syncId], references: [id], onDelete: Cascade)
  createdBy Participant? @relation(fields: [createdByParticipantId], references: [id], onDelete: SetNull)
  votes     Vote[]

  @@index([syncId, date])
}

model Participant {
  id        String   @id @default(uuid())
  name      String
  syncId    String
  hashedPasscode String
  createdAt DateTime @default(now())

  sync       Sync         @relation(fields: [syncId], references: [id], onDelete: Cascade)
  votes      Vote[]
  TimeOption TimeOption[]

  @@unique([syncId, name])
}

model Vote {
  id            String   @id @default(uuid())
  participantId String
  timeOptionId  String
  createdAt     DateTime @default(now())

  participant Participant @relation(fields: [participantId], references: [id], onDelete: Cascade)
  timeOption  TimeOption  @relation(fields: [timeOptionId], references: [id], onDelete: Cascade)

  @@unique([participantId, timeOptionId])
  @@index([timeOptionId])
}
