# Copy and paste on https://dbdiagram.io/

Table Sync {
  id uuid [pk]
  title text
  description text [null]
  timeZone text [default: "UTC"]
  expiresAt timestamp [null]
  hashedPasscode text
  createdAt timestamp
  updatedAt timestamp

  indexes {
    expiresAt
  }
}

Table Participant {
  id uuid [pk]
  name text
  syncId uuid [ref: > Sync.id]
  hashedPasscode text
  createdAt timestamp

  indexes {
    (syncId, name) [unique]
  }
}

Table TimeOption {
  id uuid [pk]
  syncId uuid [ref: > Sync.id]
  date timestamp
  startTime timestamp
  endTime timestamp
  // null = created by the leader
  createdByParticipantId uuid [ref: > Participant.id, null]
  createdAt timestamp
  updatedAt timestamp

  indexes {
    (syncId, date)
  }
}

Table Vote {
  id uuid [pk]
  participantId uuid [ref: > Participant.id]
  timeOptionId uuid [ref: > TimeOption.id]
  createdAt timestamp

  indexes {
    (participantId, timeOptionId) [unique]
    timeOptionId
  }
}